Dictionary and Set

--- a/variables.ipynb
+++ b/variables.ipynb
@@ -608,12 +608,13 @@
    "source": [
     "## Set\n",
     "- no duplicate value.\n",
-    "- no order."
+    "- no order.\n",
+    "- no index."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,14 +623,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 4, 5, 'How are you', 'Hello'}\n"
+      "{1, 2, 3, 'Apple', 4, 5, 'Hello', 'How are you'}\n"
      ]
     }
    ],
