--- a/variables.ipynb
+++ b/variables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "Python\n",
+      "3.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)\n",
+    "print(y)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I\"m myo.\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = \"I\\\"m myo.\"\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +69,7 @@
        "float"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -75,28 +115,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 'Hello', 'How are you']"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 'Hello', 'How are you']\n"
+     ]
     }
    ],
    "source": [
     "list_var = [0, 1, 2, 3, 4, 5, \"Hello\", \"How are you\"]\n",
-    "list_var"
+    "print(list_var)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 12, 13, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_grades = [11, 12, 13, 14]\n",
+    "print(student_grades)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +160,7 @@
        "['Hello', 'How are you']"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -133,19 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 'Hello', 'How are you', 6]\n"
+      "[0, 1, 2, 3, 4, 5, 'Hello', 'How are you', 6, 6]\n"
      ]
     }
    ],
    "source": [
     "# append\n",
+    "list_var.append(6)\n",
     "list_var.append(6)\n",
     "print(list_var)"
    ]
@@ -159,23 +215,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_var[6] = 7"
+    "list_var[3] = 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 7, 'How are you', 6]\n"
+      "[0, 1, 2, 6, 4, 5, 'Hello', 'How are you', 6, 6]\n"
      ]
     }
    ],
@@ -185,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 7, 'How are you']"
+       "[0, 1, 2, 4, 5, 'Hello', 'How are you', 6, 6]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,14 +262,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 5, 'Hello', 'How are you', 6, 6]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_var.remove(4)\n",
+    "list_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 5, 'Hello', 'How are you', 6, 6]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_var.remove(2)\n",
+    "list_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 4, 5, 7, 'How are you']\n"
+      "[0, 1, 5, 'How are you', 6, 6]\n"
      ]
     }
    ],
@@ -224,14 +322,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "[0, 1, 5, 6, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "del list_var[3]\n",
+    "print(list_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
      ]
     }
    ],
@@ -241,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -249,15 +365,35 @@
      "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[94], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlist_var\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[126]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlist_var\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m7\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[31mIndexError\u001b[39m: list index out of range"
      ]
     }
    ],
    "source": [
     "print(list_var[7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list_var)"
    ]
   },
   {
@@ -438,6 +574,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_grades = [11, 12, 13, 14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# student_grade\n",
+    "0: 11\n",
+    "1: 12\n",
+    "2: 13\n",
+    "3: 14"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -448,16 +606,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_var = {\"name\":\"Mark\", \"age\": 25}"
+    "student1 = [\"Mark\", 25, \"Business\", \"1A\"]\n",
+    "# student1\n",
+    "# 0: \"Mark\"\n",
+    "# 1: 25\n",
+    "# 2: \"Business\"\n",
+    "# 3: \"1A\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# age of Student 1\n",
+    "print(student1[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student1 = {\n",
+    "    \"name\": \"Mark\",\n",
+    "    \"age\": 25,\n",
+    "    \"program\": \"Business\",\n",
+    "    \"class\": \"1A\"\n",
+    "}\n",
+    "\n",
+    "# student1\n",
+    "# name: \"Mark\"\n",
+    "# age: 25\n",
+    "# program: \"Business\"\n",
+    "# class: \"1A\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# age of Student 1\n",
+    "print(student1[\"age\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student1[\"age\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -469,12 +708,12 @@
     }
    ],
    "source": [
-    "print(f\"His name is {dict_var['name']} and he is {dict_var['age']} years old.\")"
+    "print(f\"His name is {student1['name']} and he is {student1['age']} years old.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,14 +774,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Alice', 'age': 25}\n"
+      "{'name': 'Honey', 'age': 25}\n"
      ]
     }
    ],
@@ -552,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,14 +800,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Alice', 'age': 30}\n"
+      "{'name': 'Honey', 'age': 30}\n"
      ]
     }
    ],
@@ -578,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,19 +826,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Alice', 'age': 30, 'education': 'Bachelor'}\n"
+      "{'name': 'Honey', 'age': 30, 'education': 'Bachelor'}\n"
      ]
     }
    ],
    "source": [
     "print(dict_var2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = [\n",
+    "    {\n",
+    "        \"name\": \"Mark\",\n",
+    "        \"age\": 25,\n",
+    "        \"program\": \"Business\",\n",
+    "        \"class\": \"1A\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Honey\",\n",
+    "        \"age\": 14,\n",
+    "        \"program\": \"Science\",\n",
+    "        \"class\": \"2B\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"John\",\n",
+    "        \"age\": 22,\n",
+    "        \"program\": \"Arts\",\n",
+    "        \"class\": \"3C\"\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mark'"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students[0][\"name\"]"
    ]
   },
   {
@@ -614,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,14 +910,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 'Apple', 4, 5, 'Hello', 'How are you'}\n"
+      "{1, 2, 3, 4, 5, 'How are you', 'Apple', 'Hello'}\n"
      ]
     }
    ],
@@ -640,15 +927,215 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 'How are you', 'Apple', 'Hello'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_var.add(6)\n",
+    "print(set_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SET', 'SERD', 'SOM', 'SET']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ait_schools = [\"SET\", \"SERD\", \"SOM\", \"SET\"]\n",
+    "print(ait_schools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SERD', 'SOM', 'SET']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ait_schools = set(ait_schools)\n",
+    "ait_schools = list(ait_schools)\n",
+    "print(ait_schools)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transversing lists, dictionaries, tuples, and sets"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "students_email = [\n",
+    "    \"mark@example.com\",\n",
+    "    \"honey@example.com\",\n",
+    "    \"john@example.com\",\n",
+    "    \"alice@example.com\",\n",
+    "    \"bob@example.com\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Send 'Hello' email to  mark@example.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "students_email[0]\n",
+    "print(\"Send 'Hello' email to \", students_email[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Send 'Hello' email to  mark@example.com\n",
+      "Send 'Hello' email to  honey@example.com\n",
+      "Send 'Hello' email to  john@example.com\n",
+      "Send 'Hello' email to  alice@example.com\n",
+      "Send 'Hello' email to  bob@example.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "for email in students_email:\n",
+    "    print(\"Send 'Hello' email to \", email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name : Mark\n",
+      "age : 25\n",
+      "program : Business\n",
+      "class : 1A\n"
+     ]
+    }
+   ],
+   "source": [
+    "student1 = {\n",
+    "    \"name\": \"Mark\",\n",
+    "    \"age\": 25,\n",
+    "    \"program\": \"Business\",\n",
+    "    \"class\": \"1A\"\n",
+    "}\n",
+    "\n",
+    "for key, value in student1.items():\n",
+    "    print(key, \":\", value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = [\n",
+    "    {\"name\": \"Mark\", \"age\": 25, \"program\": \"Business\", \"class\": \"1A\", \"school\": \"SET\"},\n",
+    "    {\"name\": \"Honey\", \"age\": 14, \"program\": \"Science\", \"class\": \"1B\", \"school\": \"SERD\"},\n",
+    "    {\"name\": \"John\", \"age\": 22, \"program\": \"Arts\", \"class\": \"1C\", \"school\": \"SOM\"},\n",
+    "    {\"name\": \"Alice\", \"age\": 23, \"program\": \"Engineering\", \"class\": \"1D\", \"school\": \"SET\"},\n",
+    "    {\"name\": \"Bob\", \"age\": 24, \"program\": \"Law\", \"class\": \"1E\", \"school\": \"SERD\"},\n",
+    "    {\"name\": \"Charlie\", \"age\": 26, \"program\": \"Medicine\", \"class\": \"1F\", \"school\": \"SOM\"}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schools = []\n",
+    "for single_student in students:\n",
+    "    schools.append(single_student[\"school\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SET', 'SERD', 'SOM', 'SET', 'SERD', 'SOM']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(schools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'SERD', 'SOM', 'SET'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "schools = set(schools)\n",
+    "print(schools)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NLP_Datacamp",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -662,7 +1149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
